--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".MenuActivity"></activity>
+        <activity android:name=".EditExpensesActivity"></activity>
+        <activity android:name=".AccountActivity"></activity>
+        <activity android:name=".BudgetActivity"></activity>
+        <activity android:name=".EditAccountsActivity"></activity>
+        <activity android:name=".EditBudgetActivity"></activity>
+        <activity android:name=".EditReceiptActivity"></activity>
+        <activity android:name=".ExpensesActivity"></activity>
+        <activity android:name=".ReceiptActivity"></activity>
+
     </application>
 
 </manifest>
